--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -108,4 +108,25 @@
         <field name="context">{'default_type': 'stock_state'}</field>
     </record>
 
+    <record id="view_order_tree_inherit_delivery_state_cgm" model="ir.ui.view">
+        <field name="name">sale.order.order.delivery.state</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_delivery_state.view_order_tree_inherit_delivery_state"/>
+        <field name="arch" type="xml">
+            <field name="delivery_state" position="attributes">
+                <attribute name="optional">show</attribute>
+            </field>
+        </field>
+    </record>
+
+    <record id="sale_order_form_delivery" model="ir.ui.view">
+        <field name="name">sale.order.form.delivery.</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='sale_shipping']" position="inside">
+                <field name="delivery_state" position="move"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
