--- a/cgm-addons/cgm_sale/report/stock_state_template.xml
+++ b/cgm-addons/cgm_sale/report/stock_state_template.xml
@@ -2,6 +2,20 @@
 <odoo>
     <data noupdate="0">
 
+        <template id="report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
+            <xpath expr="//th[@name='th_description']" position="before">
+                <th name="th_sku_code" class="text-center">SKU
+                    <br/>
+                    Code
+                </th>
+            </xpath>
+            <xpath expr="//td[@name='td_name']" position="before">
+                <td name="td_sku_code" class="text-center">
+                    <span t-field="line.product_id"/>
+                </td>
+            </xpath>
+        </template>
+
         <template id="cgm_stock_state_document" inherit_id="sale.report_saleorder_document" primary="True" priority="1000">
             <xpath expr="//t[@t-if='doc.partner_shipping_id == doc.partner_invoice_id
                              and doc.partner_invoice_id != doc.partner_id
@@ -19,12 +33,6 @@
                 </h2>
             </xpath>
             <!-- th -->
-            <xpath expr="//th[@name='th_description']" position="before">
-                <th name="th_sku_code" class="text-center">SKU
-                    <br/>
-                    Code
-                </th>
-            </xpath>
             <xpath expr="//th[@name='th_quantity']" position="before">
                 <th name="th_thumbnail" class="text-center">Thumbnail</th>
                 <th name="th_barcode" class="text-center">EAN
@@ -40,13 +48,8 @@
             </xpath>
             <xpath expr="//th[@name='th_taxes']" position="replace"/>
             <!-- td -->
-            <xpath expr="//td[@name='td_name']" position="before">
-                <td name="td_sku_code" class="text-center">
-                    <span t-field="line.product_id.default_code"/>
-                </td>
-            </xpath>
             <xpath expr="//span[@t-field='line.name']" position="replace">
-                <span t-field="line.product_id.name" class="text-left"/>
+                <span t-field="line.name" class="text-left"/>
             </xpath>
             <xpath expr="//td[@name='td_quantity']" position="after">
                 <td name="th_desired_qty"></td>
