--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -36,7 +36,7 @@
                     <button name="button_send_quotation" string="Send Quotations" type="object" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'generated')]}"/>
                     <button name="button_print_quotation" string="Print Quotations" type="object" class="oe_highlight" attrs="{'invisible': [('state', 'not in', ['generated', 'sent'])]}"/>
                     <button name="button_confirm" string="Confirm" type="object" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'sent')]}"/>
-                    <button name="button_cancel" string="Cancel" type="object"/>
+                    <button name="button_cancel" string="Cancel" type="object" attrs="{'invisible': [('state', '=', 'cancel')]}"/>
                     <button name="button_draft" string="Reset To Draft" type="object" attrs="{'invisible': [('state', '!=', 'cancel')]}"/>
                     <field name="state" widget="statusbar" statusbar_visible="draft,checked,generated,sent,done" readonly="1"/>
                 </header>
