--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
@@ -49,14 +49,16 @@
                         <group>
                             <group>
                                 <field name="reference"/>
-                                <field name="licence_id" options="{'no_create': True, 'no_edit': True}"/>
+                                <field name="licence_id" options="{'no_create': True, 'no_edit': True}" required="1"/>
+                                <field name="category_ids" widget="many2many_tags" options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
+                                <field name="device_ids" widget="many2many_tags" options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
                                 <field name="currency_id" options="{'no_create': True, 'no_edit': True}"/>
-                                <field name="user_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="purchase_order_ids" invisible="1"/>
                             </group>
                             <group>
                                 <field name="date"/>
                                 <field name="date_approve"/>
+                                <field name="user_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="responsible_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="company_id" options="{'no_create': True, 'no_edit': True}"/>
                             </group>
@@ -91,9 +93,7 @@
                                     <group>
                                         <field name="notes" nolabel="1" placeholder="Define your terms and conditions ..."/>
                                     </group>
-                                    <group class="oe_subtotal_footer oe_right">
-                                        <!--field name="tax_totals_json" widget="account-tax-totals-field" nolabel="1" colspan="2"/-->
-                                    </group>
+                                    <group class="oe_subtotal_footer oe_right"/>
                                 </group>
                                 <div class="oe_clear"/>
                             </page>
