--- a/cgm-addons/cgm_sale/views/product_template_views.xml
+++ b/cgm-addons/cgm_sale/views/product_template_views.xml
@@ -23,6 +23,9 @@
             <field name="standard_price" position="attributes">
                 <attribute name="readonly">0</attribute>
             </field>
+            <field name="barcode" position="after">
+                <field name="upc_code" optional="hide"/>
+            </field>
             <field name="barcode" position="attributes">
                 <attribute name="string">EAN Code</attribute>
             </field>
@@ -49,6 +52,7 @@
                 <field name="collection_id"/>
                 <field name="device_id"/>
                 <field name="color_id"/>
+                <field name="upc_code"/>
             </field>
             <field name="categ_id" position="attributes">
                 <attribute name="string">Product Family</attribute>
@@ -81,6 +85,7 @@
             <xpath expr="//page[@name='general_information']//group" position="inside">
                 <group>
                     <field name="barcode" string="EAN Code"/>
+                    <field name="upc_code"/>
                     <field name="product_type_product"/>
                     <field name="royalties_margins"/>
                 </group>
