--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -52,6 +52,14 @@
                     </div>
                 </button>
             </div>
+            <label for="number_of_days" position="attributes">
+                <attribute name="string">Stocks Validity</attribute>
+            </label>
+            <field name="number_of_days" position="attributes">
+                <attribute name="string">Stocks Validity</attribute>
+                <attribute name="help">The period of validity of the stocks</attribute>
+            </field>
+
         </field>
     </record>
 
