--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
@@ -50,13 +50,20 @@
                             <group>
                                 <field name="reference"/>
                                 <field name="licence_id" options="{'no_create': True, 'no_edit': True}" required="1"/>
-                                <field name="category_ids" widget="many2many_tags" options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
-                                <field name="device_ids" widget="many2many_tags" options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
+                                <field name="category_ids" widget="many2many_tags"
+                                       options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
+                                <field name="device_ids" widget="many2many_tags"
+                                       options="{'no_create': True, 'no_edit': True, 'color_field': 'color'}"/>
                                 <field name="currency_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="purchase_order_ids" invisible="1"/>
                             </group>
                             <group>
                                 <field name="date"/>
+                                <label for="number_of_days"/>
+                                <div id="number_of_days">
+                                    <field name="number_of_days" class="oe_inline"/>
+                                    days
+                                </div>
                                 <field name="date_approve"/>
                                 <field name="user_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="responsible_id" options="{'no_create': True, 'no_edit': True}"/>
