--- a/cgm-addons/cgm_sale/report/sale_report.xml
+++ b/cgm-addons/cgm_sale/report/sale_report.xml
@@ -10,4 +10,16 @@
         <field name="binding_model_id" ref="sale.model_sale_order"/>
         <field name="binding_type">report</field>
     </record>
+
+    <record id="action_report_stock_state_xlsx" model="ir.actions.report">
+        <field name="name">Stock State Xlsx</field>
+        <field name="model">sale.order</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">cgm_sale.cgm_report_stock_state_xlsx</field>
+        <field name="report_file">cgm_sale.cgm_report_stock_state_xlsx</field>
+        <field name="print_report_name">'Stock State # %s' % (object.sale_order_template_id.name or '')</field>
+        <field name="report_type">xlsx</field>
+        <field name="binding_model_id" ref="sale.model_sale_order"/>
+        <field name="binding_type">report</field>
+    </record>
 </odoo>
