[IMPL] : add thumbnail in stock state line and improve the image size

--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
@@ -86,7 +86,7 @@
                                         <field name="sequence" widget="handle"/>
                                         <field name="product_id" string="SKU Code"/>
                                         <field name="name" widget="section_and_note_text"/>
-                                        <field name="image" widget="image" class="oe_avatar" height="40"/>
+                                        <field name="image" widget="image" class="oe_avatar"/>
                                         <field name="barcode"/>
                                         <field name="qty_available"/>
                                         <field name="virtual_available"/>
