[IMPL] : add warehouse in stock state and need mgmt process

--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -21,19 +21,21 @@
             <field name="active" position="after">
                 <field name="licence_id" required="1"/>
                 <field name="pricelist_id" options="{'no_create': True, 'no_edit': True}"/>
-                <field name="partner_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                <field name="partner_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}" invisible="1"/>
             </field>
 
             <field name="company_id" position="before">
                 <field name="date" required="1"/>
                 <field name="type" required="1"/>
+                <field name="warehouse_id" options="{'no_create': True, 'no_edit': True}" required="1"/>
             </field>
 
             <xpath expr="//sheet" position="before">
                 <header>
                     <button name="button_check_stock" string="Check Stock" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'draft')]}"/>
-                    <button name="button_unlink_lines_with_quantity_lt_0" string="Unlink Lines With Qte &lt;= 0" type="object" class="oe_highlight"
+                    <button name="button_unlink_lines_with_quantity_lt_0" string="Unlink Lines With Qte &lt;= 0" type="object"
+                            class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'checked')]}"/>
                     <button name="button_generate_quotation" string="Generate Quotations" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'checked')]}"/>
@@ -50,6 +52,14 @@
             </xpath>
 
             <div name="button_box" position="inside">
+                <button class="oe_stat_button" name="action_view_customers" type="object" icon="fa-users">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_value">
+                            <field name="partner_count"/>
+                        </span>
+                        <span class="o_stat_text">Customers</span>
+                    </div>
+                </button>
                 <button class="oe_stat_button" name="action_view_sale_orders" type="object" icon="fa-usd">
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_value">
@@ -114,6 +124,7 @@
                 <field name="date"/>
                 <field name="licence_id"/>
                 <field name="pricelist_id"/>
+                <field name="warehouse_id"/>
                 <group expand="0" string="Group By">
                     <filter string="Licence" name="filter_product_licence" context="{'group_by': 'licence_id'}"/>
                     <filter string="Pricelist" name="filter_product_pricelist" context="{'group_by': 'pricelist_id'}"/>
