--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_views.xml
@@ -67,6 +67,7 @@
                                 <field name="date_approve"/>
                                 <field name="user_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="responsible_id" options="{'no_create': True, 'no_edit': True}"/>
+                                <field name="warehouse_id" options="{'no_create': True, 'no_edit': True}"/>
                                 <field name="company_id" options="{'no_create': True, 'no_edit': True}"/>
                             </group>
                         </group>
@@ -151,6 +152,7 @@
                     <field name="user_id"/>
                     <field name="responsible_id"/>
                     <field name="licence_id"/>
+                    <field name="warehouse_id"/>
                     <group expand="1" string="Group By">
                         <filter string="Date" name="date_filter_group_by" domain="[]" context="{'group_by':'date'}"/>
                         <filter string="State" name="state_filter_group_by" domain="[]" context="{'group_by':'state'}"/>
