--- a/cgm-addons/cgm_stock/report/report_deliveryslip.xml
+++ b/cgm-addons/cgm_stock/report/report_deliveryslip.xml
@@ -19,6 +19,14 @@
                     <span t-field="move.product_id"/>
                 </td>
             </xpath>
+
+            <xpath expr="//span[@t-field='move.product_uom_qty']//..//span[2]" position="attributes">
+                <attribute name="t-if">move.product_uom.id != move.env.ref('uom.product_uom_categ_unit').id</attribute>
+            </xpath>
+
+            <xpath expr="//span[@t-field='move.quantity_done']//..//span[2]" position="attributes">
+                <attribute name="t-if">move.product_uom.id != move.env.ref('uom.product_uom_categ_unit').id</attribute>
+            </xpath>
         </template>
 
     </data>
