--- a/cgm-addons/cgm_sale/views/sale_order_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_views.xml
@@ -38,5 +38,17 @@
             </field>
         </record>
 
+        <record id="sale_order_view_order_tree_inherit" model="ir.ui.view">
+            <field name="name">sale.order.cg.mobile</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_tree"/>
+            <field name="arch" type="xml">
+                <field name="amount_total" position="after">
+                    <field name="company_currency_id" invisible="1"/>
+                    <field name="amount_total_in_currency"/>
+                </field>
+            </field>
+        </record>
+
     </data>
 </odoo>
