--- a/cgm-addons/cgm_sale/views/sale_order_template_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_template_views.xml
@@ -34,14 +34,13 @@
                 <header>
                     <button name="button_check_stock" string="Check Stock" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'draft')]}"/>
-                    <button name="button_unlink_lines_with_quantity_lt_0" string="Unlink Lines With Qte &lt;= 0" type="object"
-                            class="oe_highlight"
+                    <button name="button_unlink_lines_with_quantity_lt_0" string="Unlink Lines Qte &lt;= 0" type="object"
                             attrs="{'invisible': [('state', '!=', 'checked')]}"/>
                     <button name="button_generate_quotation" string="Generate Quotations" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'checked')]}"/>
-                    <button name="button_send_quotation" string="Send Quotations" type="object" class="oe_highlight"
+                    <button name="action_send_by_mail" string="Send By Mail" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'generated')]}"/>
-                    <button name="button_print_quotation" string="Print Quotations" type="object" class="oe_highlight"
+                    <button name="button_download_quotation_xls" string="Download XLS" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', 'not in', ['generated', 'sent'])]}"/>
                     <button name="button_confirm" string="Confirm" type="object" class="oe_highlight"
                             attrs="{'invisible': [('state', '!=', 'sent')]}"/>
@@ -88,6 +87,14 @@
             <xpath expr="//field[@name='sale_order_template_line_ids']//tree" position="attributes">
                 <attribute name="decoration-info">not display_type and state == 'checked' and product_uom_qty &lt; 0</attribute>
                 <attribute name="decoration-danger">not display_type and state == 'checked' and not product_uom_qty</attribute>
+            </xpath>
+
+            <xpath expr="//sheet" position="after">
+                <div class="oe_chatter" name="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="message_ids"/>
+                    <field name="activity_ids"/>
+                </div>
             </xpath>
 
         </field>
@@ -145,6 +152,17 @@
                       (0, 0, {'view_mode': 'form', 'view_id': ref('sale_order_template_view_form_inherit')})]"/>
         <field name="domain">[('type', '=', 'stock_state')]</field>
         <field name="context">{'default_type': 'stock_state'}</field>
+    </record>
+
+    <record id="action_account_aml_to_asset" model="ir.actions.server">
+        <field name="name">Send By Mail</field>
+        <field name="model_id" ref="sale_management.model_sale_order_template"/>
+        <field name="binding_model_id" ref="sale_management.model_sale_order_template"/>
+        <field name="state">code</field>
+        <field name="code">
+            if records:
+                action = records.action_send_by_mail()
+        </field>
     </record>
 
 </odoo>
