--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_line_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_line_views.xml
@@ -15,7 +15,8 @@
                     <field name="barcode" optional="hide"/>
                     <field name="qty_available"/>
                     <field name="virtual_available"/>
-                    <!--field name="qty_projected"/-->
+                    <field name="outgoing_qty"/>
+                    <field name="incoming_qty"/>
                     <field name="product_qty"/>
                     <field name="price_unit" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                     <field name="seller_id" optional="hide"/>
