--- a/cgm-addons/cgm_purchase/views/purchase_order_line_views.xml
+++ b/cgm-addons/cgm_purchase/views/purchase_order_line_views.xml
@@ -12,7 +12,7 @@
                     <field name="name"/>
                     <field name="partner_id" string="Supplier"/>
                     <field name="price_unit"/>
-                    <field name="product_qty"/>
+                    <field name="product_qty" sum="Total Qty"/>
                     <field name="qty_received"/>
                     <field name="qty_invoiced"/>
                     <field name="qty_to_invoice"/>
