--- a/cgm-addons/cgm_sale/views/sale_order_views.xml
+++ b/cgm-addons/cgm_sale/views/sale_order_views.xml
@@ -50,5 +50,25 @@
             </field>
         </record>
 
+        <!-- Inherit Form View to Modify it -->
+        <record id="sale_order_view_form_inherit" model="ir.ui.view">
+            <field name="name">sale.order.view.form.inherit</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='order_line']//tree/field[@name='product_uom_qty']" position="attributes">
+                    <attribute name="sum">Total Ordered Qty</attribute>
+                </xpath>
+                <xpath expr="//field[@name='order_line']//tree/field[@name='qty_delivered']" position="attributes">
+                    <attribute name="sum">Total Delivered Qty</attribute>
+                </xpath>
+                <xpath expr="//field[@name='order_line']//tree/field[@name='qty_invoiced']" position="attributes">
+                    <attribute name="sum">Total Invoiced Qty</attribute>
+                </xpath>
+
+            </field>
+        </record>
+
     </data>
 </odoo>
