--- a/cgm-addons/cgm_purchase/views/need_mgmt_process_line_views.xml
+++ b/cgm-addons/cgm_purchase/views/need_mgmt_process_line_views.xml
@@ -13,11 +13,12 @@
                     <field name="name"/>
                     <field name="image" widget="image" class="oe_avatar"/>
                     <field name="barcode" optional="hide"/>
-                    <field name="qty_available"/>
-                    <field name="virtual_available"/>
-                    <field name="outgoing_qty"/>
-                    <field name="incoming_qty"/>
-                    <field name="product_qty"/>
+                    <field name="physical_qty" sum="Total Physical Qty"/>
+                    <field name="outgoing_qty" sum="Total Outgoing Qty"/>
+                    <field name="available_qty" sum="Total Available Qty"/>
+                    <field name="incoming_qty" sum="Total Incoming Qty"/>
+                    <field name="projected_qty" sum="Total Projected Qty"/>
+                    <field name="product_qty" sum="Total Ordered Qty"/>
                     <field name="price_unit" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                     <field name="seller_id" optional="hide"/>
                 </tree>
